apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_type.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1221
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                id
            }
        }
        
extracted_policies: {"itf"}
successful policies: []
filtered:
{
  test
}

paths: ["/itf"]
