apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_typename-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1606
expression: paths
---
[]
