apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__interface_typename.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1605
expression: doc
---
query Anonymous {
  post(id: "1") {
    ... on PublicBlog {
      __typename
      title
    }
  }
}
