apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__mutation.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 888
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        mutation {
            ping {
                name
            }
            other
        }
        
extracted_policies: {"mut", "ping", "read user", "read username"}
successful policies: []
filtered:

paths: [""]
