apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__policy__tests__or_and-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
assertion_line: 1126
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies:\n    [\"read user\".to_string(), \"internal\".to_string()].into_iter().collect(),\n    result: doc, paths\n}"
---
query:

        {
            customer {
                id
            }
        }
        
extracted_policies: {"admin", "internal", "read user"}
successful policies: ["read user", "internal"]
filtered:
{
  customer {
    id
  }
}

paths: []
